Renamed to Index

--- a/EverythingElse/music.html
+++ b/EverythingElse/music.html
@@ -23,7 +23,7 @@
           >
             <!-- Logo -->
             <div class="p-1">
-              <a href="../homepage.html">
+              <a href="../index.html">
                 <img
                   src="./assets/OtherImages/logoCropped.png"
                   class="h-16 w-32"
